adds user obj retrieval

--- a/public/members.html
+++ b/public/members.html
@@ -40,9 +40,9 @@
       <button type="button" class="btn round btn-primary btn-sm round-button m-1">2</button>
       <select class="custom-select gender">
         <option selected>My Gender Is</option>
-        <option value="1">Male</option>
-        <option value="2">Female</option>
-        <option value="3">Other</option>
+        <option value="Male">Male</option>
+        <option value="Female">Female</option>
+        <option value="Other">Other</option>
       </select>
     </div>
   </div>
@@ -55,10 +55,10 @@ Orientation Selector -->
     <button type="button" class="btn round btn-primary btn-sm round-button m-1">3</button>
     <select class="custom-select orientation">
       <option selected>My Sexual Orientation Is</option>
-      <option value="4">Straight</option>
-      <option value="5">Bisexual</option>
-      <option value="6">Lesbian</option>
-      <option value="7">Gay</option>
+      <option value="Straight">Straight</option>
+      <option value="Bisexual">Bisexual</option>
+      <option value="Lesbian">Lesbian</option>
+      <option value="Gay">Gay</option>
     </select>
   </div>
   <div class="col-3">
