--- a/public/members.html
+++ b/public/members.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
   <link href="stylesheets/style.css" rel="stylesheet">
 </head>
-<body>
+<body class="background-image">
   <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -26,20 +26,18 @@
   </div>
       <!-- First Name Place Holder -->
   <div class="row">
-    <div class="col-2"></div>
-    <div class="col-4">
-      <form>
-        <div class="col m-1 d-flex">
-          <button type="button" class="btn round btn-primary btn-sm round-button m-1">1</button>
-          <input type="text" id="firstName" class="form-control" placeholder="First name">
-        </div>
+    <div class="col-3"></div>
+    <div class="col-2 m-1 d-flex">
+      <form class="d-flex">
+        <button type="button" class="btn round btn-primary btn-sm round-button m-1">1</button>
+        <input type="text" id="firstName" class="form-control" placeholder="First name">
       </form>
     </div>
    <!-- Gender Selector -->
-    <div class="col-3 m-1 d-flex">
+    <div class="col-2 m-1 d-flex">
       <button type="button" class="btn round btn-primary btn-sm round-button m-1">2</button>
       <select class="custom-select gender">
-        <option selected>My Gender Is</option>
+        <option disabled selected hidden>My Sexual Orientation Is</option>
         <option value="Male">Male</option>
         <option value="Female">Female</option>
         <option value="Other">Other</option>
@@ -50,34 +48,50 @@
 <!-- 
 Orientation Selector -->
 <div class="row">
-  <div class="col-2"></div>
-  <div class="col-4 m-1 d-flex">
+  <div class="col-3"></div>
+  <div class="col-2 m-1 d-flex">
     <button type="button" class="btn round btn-primary btn-sm round-button m-1">3</button>
     <select class="custom-select orientation">
-      <option selected>My Sexual Orientation Is</option>
+      <option disabled selected hidden>My Sexual Orientation Is</option>
       <option value="Straight">Straight</option>
       <option value="Bisexual">Bisexual</option>
       <option value="Lesbian">Lesbian</option>
       <option value="Gay">Gay</option>
     </select>
   </div>
-  <div class="col-3">
+  <div class="col-3 d-flex m-1">
     <button type="button" class="btn round btn-primary btn-sm round-button m-1">4</button>
     <label for="birthday">Birthdate:</label>
     <input type="date" id="birthday" name="birthday">
   </div>
 </div>
 <br><br>
+<!-- Bio  -->
 <div class="row d-flex">
-  <div class="col-2"></div>
-  <div class="col-6">
+  <div class="col-3"></div>
+  <div class="col-2  m-1">
     <div class="form-group">
       <button type="button" class="btn round btn-primary btn-sm round-button m-1">5</button>
       <label for="exampleFormControlTextarea1">Enter your short Smasual bio here</label>
-      <textarea class="form-control background-colorz" id="bioDescription" rows="3" placeholder="Enter Your Short Sensual Profile Here"></textarea>
+      <textarea class="form-control background-colorz-2" id="bioDescription" rows="3" placeholder="Enter Your Short Sensual Profile"></textarea>
     </div>
   </div>
-  <button type="submit" class="btn btn-primary btn-sm m-1" id="create">Create</button>
+  <!-- Zip Code -->
+  <div class="col-2 m-1">
+  <form>
+    <div>
+      <button type="button" class="btn round btn-primary btn-sm round-button m-1">6</button>
+      <input type="text" id="zip" class="form-control" placeholder="Your Zip Code">
+    </div>
+  </form>
+</div>
+</div>
+<br><br>
+<div class="row d-flex">
+  <div class="col-4"></div>
+  <div class="col-2">
+    <button type="button" id="create" class="btn btn-primary btn-lg submit-button">Create Profile</button>
+  </div>
 </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
