--- a/public/home.html
+++ b/public/home.html
@@ -21,8 +21,9 @@
   </nav>
   <div class="container">
     <div class="jumbotron">
-      <h1>Smasual</h1>
+      <h1>Welcome to Smasual</h1>
       <h3>Smash Casually</h3>
+      <p class="user-profile"></p>
     </div>
     <div class="row">
       <div class="col-lg-12">
@@ -43,15 +44,20 @@
               <option value="Gay">Gay</option>
             </select>
 
-            <select name="age" class="custom-select orientation">
-              <option selected>Preferred Age Range</option>
-              <option value="20-25">20-25</option>
-              <option value="26-30">26-30</option>
-              <option value="31-34">31-34</option>
-              <option value="35-40">35-40</option>
-              <option value="41-45">41-45</option>
-              <option value="46-50">46-50</option>
-            </select>
+            <!-- Age Range -->
+            <p>Start Age</p>
+            <input name="startAge" type="text" id="startAge" class="form-control">
+            <p>End Age</p>
+            <input name="endAge" type="text" id="endAge" class="form-control">
+            <br/>
+
+            
+
+
+
+            
+
+            <br/>
 
             <select name="gender" class="custom-select gender">
               <option selected>Preferred Gender</option>
@@ -84,6 +90,6 @@
     </div> -->
   </div>
   <!-- Custom Script -->
-  <script src="js/results.js" type="text/javascript"></script>
+  <script src="js/home.js" type="text/javascript"></script>
 </body>
 </html>
