adds signup navbar

--- a/public/signup.html
+++ b/public/signup.html
@@ -10,10 +10,12 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-default">
+  <nav class="navbar" style="background-color: #e91d63">
     <div class="container-fluid">
-      <div class="navbar-header">
-      </div>
+      <a class="navbar-brand" href="#">
+        <img src="/imgs/smasualLogo.jpg" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+
+      </a>
     </div>
   </nav>
   <div class="container">
