--- a/public/login.html
+++ b/public/login.html
@@ -10,12 +10,14 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-      </div>
-    </div>
-  </nav>
+  <nav class="navbar" style="background-color: #e91d63">
+    <a href="/home" class="fat-nav">
+      <img src="/imgs/smasualLogo.jpg" width="50" height="50" class="d-inline-block align-top" alt="" loading="lazy">
+      <span>Smasual</span>
+      <span class="tagline">The best casual hook-up site. Smash casually.</span>
+    </a>
+</nav>
+
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
@@ -29,10 +31,10 @@
             <label for="exampleInputPassword1">Password</label>
             <input type="password" class="form-control" id="password-input" placeholder="Password">
           </div>
-          <button type="submit" class="btn btn-default">Login</button>
+          <button type="submit" class="btn btn-default pink-btn">Login</button>
         </form>
         <br />
-        <p>Or sign up <a href="/">here</a></p>
+        <h4>Don't have an account yet? Sign up <a href="/">here</a></h4>
       </div>
     </div>
   </div>
