Add more styling to the bio and results page

--- a/public/members.html
+++ b/public/members.html
@@ -90,8 +90,8 @@ Orientation Selector -->
 <div class="row d-flex" id="fileSubmit">
   <div class="col-4"></div>
   <div class="col-2">
-  <input type="file" id="imageUpload" class="file-select" accept="image/*"/>
-  <button class="file-submit" class="btn btn-primary btn-lg submit-button">Upload image</button>
+  <input type="file" id="imageUpload" class="file-select m-1" accept="image/*"/>
+  <button class="file-submit btn btn-primary btn-lg upload-buttons m-1">Upload image</button>
 </div>
 </div>
 <br><br>
