--- a/public/home.html
+++ b/public/home.html
@@ -24,9 +24,12 @@
   
   <div class="container">
     <div class="jumbotron home-jumbo">
-      <h1>Welcome to Smasual</h1>
-      <h3>Smash Casually</h3>
-      <p class="user-profile"></p>
+      <h1>Welcome to Smasual,  <span class="user-name"></span></h1>
+      <h3>Your Profile</h3>
+      <h5>Age: <span class="user-age"></span></h5>
+      <h5>Gender: <span class="user-gender"></span></h5>
+      <h5>Gender Orientation: <span class="user-orientation"></span></h5>
+      <h5>Bio: <span class="user-bio"></span></h5>
     </div>
     <div class="row">
       <div class="col-lg-12">
